# ra-system

./: README.md
dashboard/: README.md  (+4 more)
haskell/: CHANGELOG.md  LICENSE  ra-system.cabal
haskell/clash/: BiofieldLoopback.hs  README.md  RaAttractors.hs  RaAvatarFieldVisualizer.hs  RaBiofeedbackHarness.hs  RaBiometricGenerator.hs  RaBiometricMatcher.hs  RaBiotransduction.hs  RaBridgeSync.hs  RaChamberMorphology.hs  RaChamberSync.hs  RaChamberTuning.hs  RaConsentFramework.hs  RaConsentRouter.hs  RaConsentTransformer.hs  RaDomainExtensions.hs  RaDreamPhaseScheduler.hs  RaFieldSynthesisNode.hs  RaFieldTransferBus.hs  RaGroupCoherence.hs  RaHandshakeGate.hs  RaHarmonicTwist.hs  RaLucidNavigation.hs  RaMusicChamberHarmonics.hs  RaOrgoneScalar.hs  RaOverlay.hs  RaPWMDriver.hs  RaPWMMultiFreqTest.hs  RaScalarExpression.hs  RaScalarResonance.hs  RaShadowConsent.hs  RaSonicEmitter.hs  RaSonicFlux.hs  RaSymbolicCoherenceOps.hs  RaSympatheticHarmonic.hs  RaTactileControl.hs  RaTokenomicsProfiler.hs  RaVisualizerShell.hs  Testbench.hs  gtkwave_handshake_viewer.gtkw
haskell/clash/dashboard/: DreamBloom.tsx  ScalarResonanceDashboard.tsx
haskell/clash/docs/: Prompt08_SympatheticHarmonic.md  Prompt09_OrgoneScalar.md  Prompt10_ScalarResonance.md  Prompt11_GroupCoherence.md  Prompt12_ShadowConsent.md  Prompt13_DreamPhaseScheduler.md  Prompt14_LucidNavigation.md  Prompt15_BridgeSync.md  Prompt17_BiofieldLoopback.md  Prompt22_SonicFlux.md  Prompt31_ConsentTransformer.md  Prompt32_ConsentFramework.md  Prompt33_BiometricMatcher.md  Prompt34_ScalarExpression.md  Prompt35_FieldTransferBus.md  Prompt40_ChamberSync.md  Prompt41_VisualizerShell.md  Prompt44_ChamberMorphology.md  Prompt49_HarmonicTwist.md  Prompt52_BiofeedbackHarness.md  Prompt54_SymbolicOps.md  Prompt56_TactileControl.md  Prompt62_AvatarFieldVisualizer.md  Prompt64_MusicChamberHarmonics.md  PromptIndex.md  Supporting_BiometricGenerator.md  Supporting_ConsentRouter.md  Supporting_FieldSynthesisNode.md  Supporting_HandshakeGate.md  Supporting_TokenomicsProfiler.md
haskell/clash/src/: RaAppendageVectorRemap.hs  RaBioFieldTuningMap.hs  RaChamberMorphology.hs  RaChamberORMEFlux.hs  RaChamberSync.hs  RaChamberSynthesis.hs  RaChamberTeslaVortex.hs  RaContactEnvelope.hs  RaDreamSurface.hs  RaEnergyTapNode.hs  RaEntangleBioMap.hs  RaFragmentArtifactResonator.hs  RaFragmentEchoField.hs  RaFrequencyMapping.hs  RaHealingCoilMatrix.hs  RaIdentityConsentReversal.hs  RaInterfaceTactileControl.hs  RaInversionHarmonicTwist.hs  RaJoeBubble.hs  RaLexiconHarmonizer.hs  RaMemoryFragmentPalette.hs  RaMemoryORMEWaterSync.hs  RaPipelineDreamShift.hs  RaPlanetaryGridLeylineMap.hs  RaProjectionMap.hs  RaPropulsionVectorConduction.hs  RaPylonNodeGenerator.hs  RaResonatorMusicChamber.hs  RaShellLimbGestures.hs  RaShellLimbLearning.hs  RaShellResonantGestures.hs  RaSimulationAetherLab.hs  RaTelemetryRecoveryGraph.hs  RaVectorArm.hs  RaVisualizerGlyphs.hs  RaVisualizerShell.hs  RaVisualizerShellHUD.hs  RaVortexGate.hs
haskell/clash/tests/: accumulation_log.json  emergence_log.json  group_coherence_log.json  resonance_log.json  test_appendage_vectorremap.py  test_artifact_resonator.py  test_attractors.py  test_biofield_tuningmap.py  test_biotransduction.py  test_chamber_morphology.py  test_chamber_ormeflux.py  test_chamber_sync.py  test_chamber_synthesis.py  test_chamber_teslavortex.py  test_chamber_tuning.py  test_contact_envelope.py  test_domain_extensions.py  test_dream_phase_scheduler.py  test_dream_surface.py  test_energy_tapnode.py  test_entangle_biomap.py  test_entanglement.py  test_fragment_echofield.py  test_frequency_mapping.py  test_group_coherence.py  test_healing_coilmatrix.py  test_identity_consentreversal.py  test_integration_p17.py  test_interface_tactilecontrol.py  test_inversion_harmonictwist.py  test_joe_bubble.py  test_lexicon_harmonizer.py  test_lucid_navigation.py  test_memory_fragmentpalette.py  test_memory_ormewatersync.py  test_orgone_scalar.py  test_pipeline_dreamshift.py  test_planetarygrid_leylinemap.py  test_projection_map.py  test_propulsion_vectorconduction.py  (+15 more)
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/dist-newstyle/packagedb/ghc-9.0.1/: package.cache  ra-system-0.1.0.0-inplace.conf
haskell/src/: Ra.hs
haskell/src/Ra/: AetherSensor.hs  AlchemicalNode.hs  Appendage.hs  Attractors.hs  Biofield.hs  Biometric.hs  Chamber.hs  ChamberTuning.hs  Constants.hs  DomainExtensions.hs  Dream.hs  Emergence.hs  EnergyTransduction.hs  Entangle.hs  FrequencyTable.hs  Gates.hs  GenomicHarmonics.hs  Group.hs  Healing.hs  Identity.hs  Initiation.hs  Music.hs  Navigate.hs  Omega.hs  Orgone.hs  Pipeline.hs  PlanetaryGrid.hs  Rac.hs  Radionics.hs  Repitans.hs  Scalar.hs  Scriptum.hs  Shadow.hs  SonicFlux.hs  Spherical.hs  Sympathetic.hs  Temporal.hs  TorsionField.hs  Tuning.hs  VortexGate.hs  (+1 more)
haskell/src/Ra/Alchemy/: Stages.hs
haskell/src/Ra/Avatar/: LimbRemapping.hs
haskell/src/Ra/Biofield/: Loopback.hs  TuningMap.hs
haskell/src/Ra/Chamber/: Morphology.hs  Synthesis.hs  TeslaVortex.hs
haskell/src/Ra/Consent/: Transformer.hs
haskell/src/Ra/Constants/: Extended.hs
haskell/src/Ra/Contact/: ArtifactResonator.hs  Envelope.hs
haskell/src/Ra/Dream/: SomniferousChamber.hs  Surface.hs
haskell/src/Ra/Energy/: RadiantTap.hs
haskell/src/Ra/Engine/: Resonator.hs
haskell/src/Ra/Entangle/: BioMap.hs
haskell/src/Ra/Expression/: Pipeline.hs
haskell/src/Ra/Fragment/: EchoField.hs
haskell/src/Ra/Healing/: CoilMatrix.hs
haskell/src/Ra/Identity/: AnkhPhase.hs
haskell/src/Ra/Interface/: SymbolicOperators.hs
haskell/src/Ra/Inversion/: HarmonicTwist.hs
haskell/src/Ra/Lexicon/: Harmonizer.hs
haskell/src/Ra/Memory/: ScalarPalette.hs
haskell/src/Ra/Music/: ChamberHarmonics.hs
haskell/src/Ra/ORME/: FluxChamber.hs  WaterConsciousness.hs
haskell/src/Ra/PlanetaryGrid/: PylonNode.hs
haskell/test/: Spec.hs
rust/: Cargo.toml
rust/src/: constants.rs  gates.rs  lib.rs  omega.rs  rac.rs  repitans.rs  spherical.rs
rust/tests/: invariants.rs
(+146 files in other folders)
