cabal-version:      3.0
name:               ra-system
version:            0.1.0.0
synopsis:           Ra System mathematical framework - Haskell bindings
description:        Type-safe Haskell bindings for the Ra System mathematical constants
                    derived from "The Rods of Amon Ra" by Wesley H. Bateman.
                    .
                    Provides:
                    .
                    * Typed constants with newtype wrappers (Ankh, Hunab, etc.)
                    * Repitan type with smart constructor (1-27)
                    * RacLevel ADT with Enum/Bounded instances
                    * OmegaFormat conversions
                    * Access gating logic per ACSP specification
license:            Apache-2.0
license-file:       LICENSE
author:             Anywave
maintainer:         alex@anywavecreations.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/anywave/ra-system.git

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  Ra
                    , Ra.Constants
                    , Ra.Repitans
                    , Ra.Rac
                    , Ra.Omega
                    , Ra.Spherical
                    , Ra.Gates
                    , Ra.Scalar
                    , Ra.Biometric
                    , Ra.Temporal
                    , Ra.Emergence
                    , Ra.Identity
                    , Ra.Appendage
                    , Ra.Tuning
                    , Ra.Chamber
                    , Ra.Music
                    , Ra.Pipeline
                    , Ra.Constants.Extended
                    , Ra.Sympathetic
                    , Ra.Orgone
                    , Ra.Healing
                    , Ra.Group
                    , Ra.Shadow
                    , Ra.Dream
                    , Ra.Navigate
                    , Ra.Entangle
                    , Ra.Radionics
                    , Ra.Biofield
                    , Ra.Attractors
                    , Ra.DomainExtensions
                    , Ra.ChamberTuning
                    , Ra.SonicFlux
                    , Ra.TorsionField
                    , Ra.AlchemicalNode
                    , Ra.EnergyTransduction
                    , Ra.Scriptum
                    , Ra.WaterCohesionField
                    , Ra.GenomicHarmonics
                    , Ra.AetherSensor
                    , Ra.VortexGate
                    , Ra.FrequencyTable
                    , Ra.Sonic.Feedback
                    , Ra.Projection.Map
                    , Ra.Chamber.Morphology
                    , Ra.Entangle.BioMap
                    , Ra.Lexicon.Harmonizer
                    , Ra.Resonator.MusicChamber
                    , Ra.Telemetry.RecoveryGraph
                    , Ra.Chamber.TeslaVortex
                    , Ra.Shell.LimbGestures
                    , Ra.Shell.LimbLearning
                    , Ra.Shell.ResonantGestures
                    , Ra.Interface.SymbolicOperators
                    , Ra.Chamber.Synthesis
                    , Ra.Visualizer.Glyphs
                    , Ra.Visualizer.AvatarField
                    , Ra.Visualizer.ShellHUD
                    , Ra.Music.ChamberHarmonics
                    , Ra.Inversion.HarmonicTwist
                    , Ra.Fragment.EchoField
                    , Ra.Propulsion.VectorConduction
                    , Ra.Propulsion.BiofeedbackHarness
                    , Ra.Simulation.AetherLab
                    , Ra.ORME.FluxChamber
                    , Ra.Energy.RadiantTap
                    , Ra.Memory.ScalarPalette
                    , Ra.Initiation
                    , Ra.Alchemy.Stages
                    , Ra.Identity.AnkhPhase
                    , Ra.Biofield.TuningMap
                    , Ra.Healing.CoilMatrix
                    , Ra.Avatar.LimbRemapping
                    , Ra.ORME.WaterConsciousness
                    , Ra.PlanetaryGrid
                    , Ra.PlanetaryGrid.PylonNode
                    , Ra.Dream.Surface
                    , Ra.Dream.SomniferousChamber
                    , Ra.Contact.Envelope
                    , Ra.Contact.ArtifactResonator
    build-depends:    base >=4.14 && <5
                    , deepseq >=1.4 && <1.6
                    , aeson >=2.0 && <3.0
                    , bytestring >=0.10 && <0.13
                    , text >=1.2 && <3.0
                    , containers >=0.6 && <0.8
                    , time >=1.9 && <1.15
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: DeriveGeneric
                      , DeriveAnyClass
                      , DerivingStrategies
                      , GeneralizedNewtypeDeriving
                      , OverloadedStrings
                      , StrictData
                      , BangPatterns

test-suite ra-system-test
    import:           warnings
    default-language: Haskell2010
    default-extensions: DeriveGeneric
                      , DeriveAnyClass
                      , DerivingStrategies
                      , GeneralizedNewtypeDeriving
                      , OverloadedStrings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:    Ra.Test.Coherence
    build-depends:    base >=4.14 && <5
                    , ra-system
                    , QuickCheck >=2.14
                    , hspec >=2.10
